z-index correction

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10158,7 +10158,7 @@ h3 {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 6;
   left: 0;
   top: 0;
   width: 100%;
